# rico-context

./: CMakeLists.txt  package.xml  setup.py
launch/: rico_context.launch
msg/: HistoryEvent.msg
nodes/: rico_context_node.py
srv/: GetContext.srv  GetCurrentScenarioId.srv
