<?xml version="1.0"?>
<package format="2">
  <name>rico_context</name>
  <version>0.0.0</version>
  <description>The rico_context package</description>

  <maintainer email="nkvch.st@gmail.com">Stanislau Stankevich</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>move_base_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
 
</package>
